--- a/q/100898.html
+++ b/q/100898.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Uiua</td><td>231105T235145Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266508#266508">Bubbler</a></td></tr>
-<tr d-ix="1"><td>020</td><td>Uiua 0.1.0</td><td>231105T091339Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266481#266481">Pseudo N</a></td></tr>
-<tr d-ix="2"><td>154</td><td>Scala</td><td>231104T053507Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266459#266459">138 Aspe</a></td></tr>
-<tr d-ix="3"><td>072</td><td>Ruby</td><td>231104T051943Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266457#266457">Value In</a></td></tr>
-<tr d-ix="4"><td>022</td><td>K ngn/k</td><td>231104T033845Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266455#266455">doug</a></td></tr>
-<tr d-ix="5"><td>014</td><td>J</td><td>231103T155155Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266442#266442">Jonah</a></td></tr>
-<tr d-ix="6"><td>6875</td><td>Vyxal</td><td>231103T144141Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266440#266440">Pacmanbo</a></td></tr>
-<tr d-ix="7"><td>060</td><td>Wolfram Language Mathematica</td><td>201004T215558Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/212035#212035">att</a></td></tr>
+<tr d-ix="0"><td>058</td><td>Wolfram Language Mathematica</td><td>201004T215558Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/212035#212035">att</a></td></tr>
+<tr d-ix="1"><td>012</td><td>Uiua</td><td>231105T235145Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266508#266508">Bubbler</a></td></tr>
+<tr d-ix="2"><td>020</td><td>Uiua 0.1.0</td><td>231105T091339Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266481#266481">Pseudo N</a></td></tr>
+<tr d-ix="3"><td>154</td><td>Scala</td><td>231104T053507Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266459#266459">138 Aspe</a></td></tr>
+<tr d-ix="4"><td>072</td><td>Ruby</td><td>231104T051943Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266457#266457">Value In</a></td></tr>
+<tr d-ix="5"><td>022</td><td>K ngn/k</td><td>231104T033845Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266455#266455">doug</a></td></tr>
+<tr d-ix="6"><td>014</td><td>J</td><td>231103T155155Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266442#266442">Jonah</a></td></tr>
+<tr d-ix="7"><td>6875</td><td>Vyxal</td><td>231103T144141Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/266440#266440">pacman25</a></td></tr>
 <tr d-ix="8"><td>110</td><td>Ruby</td><td>161126T023521Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/101169#101169">Cary Swo</a></td></tr>
 <tr d-ix="9"><td>008</td><td>Husk</td><td>201004T050053Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/212009#212009">Razetime</a></td></tr>
 <tr d-ix="10"><td>084</td><td>R</td><td>161124T104849Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/100958#100958">Billywob</a></td></tr>
@@ -42,12 +42,17 @@
 <tr d-ix="13"><td>092</td><td>Mathematica</td><td>161123T230549Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/100922#100922">Greg Mar</a></td></tr>
 <tr d-ix="14"><td>093</td><td>Mathematica 93 Bytes</td><td>161123T224837Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/100920#100920">Kelly Lo</a></td></tr>
 <tr d-ix="15"><td>096</td><td>Python 2</td><td>161123T210918Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/100909#100909">Karl Nap</a></td></tr>
-<tr d-ix="16"><td>011</td><td>Jelly</td><td>161123T213011Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/100911#100911">Lynn</a></td></tr>
+<tr d-ix="16"><td>011</td><td>Jelly</td><td>161123T213011Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/100911#100911">lynn</a></td></tr>
 <tr d-ix="17"><td>017</td><td>MATL</td><td>161123T204408Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/100903#100903">Luis Men</a></td></tr>
 <tr d-ix="18"><td>116</td><td>JavaScript ES6</td><td>161123T205556Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/100905#100905">Neil</a></td></tr>
 <tr d-ix="19"><td>013</td><td>05AB1E</td><td>161123T202554Z</td><td><a href="https://codegolf.stackexchange.com/questions/100898/turn-this-array-into-a-matrix/100899#100899">Oliver N</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 12 <a href="https://codegolf.stackexchange.com/a/265917/97916">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 58 bytes</h1>
+<pre><code>Table[##&amp;@@Reverse@Drop[#,],{,l=Tr@-1^#,-l}]~Partition~-l&amp;
+</code></pre>
+<p><a href="https://tio.run/##BcGxCsMgEADQPb9x4HQOadox5YZ@QGiyiYVrMFQwJlyli@iv2/d2Th@3c/Irt21sC7@DMwCK6Ol@Tr6OHnKcBtBixjAuQrp/AepQbJ1Ykk/@iFUH1SbxMRnQ943AqjqvHGvuco8XHPCKt9KV9gc" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 12 <a href="https://codegolf.stackexchange.com/a/265917/97916">bytes</a></h1>
 <pre><code>⊏⍜♭⍏⊞+.⊃⇡▽⧻.
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=ZiDihpAg4oqP4o2c4pmt4o2P4oqeKy7iioPih6Hilr3ip7suCgpmIFsxIDIgMyA0IDVdCmYgWzFdCg==" rel="nofollow noreferrer">Try it online!</a></p>
@@ -73,7 +78,7 @@
     '⊏⍏                reorder elements of X by sorted order of elements of Y
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> (0.1.0), 20 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> (0.1.0), 20 bytes</h1>
 <pre><code>↯~√⧻./⊐⊂≐(□↘)-⇡×2.⧻.
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=4oavfuKImuKnuy4v4oqQ4oqC4omQKOKWoeKGmCkt4oehw5cyLuKnuy4gWzEgMiAzIDQgNV0K" rel="nofollow noreferrer">Try it online</a></p>
@@ -86,7 +91,7 @@
 ↯~                   # ...then this reshapes the array to MxN, where M is inferred
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="http://www.scala-lang.org/" rel="nofollow noreferrer">Scala</a>, 154 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="http://www.scala-lang.org/" rel="nofollow noreferrer">Scala</a>, 154 bytes</h1>
 <p>Golfed version. <a href="https://tio.run/##XY9Na4QwFEX3/oq7TGhGxn5s4mSgy4JZla4GF69OlBQbh5gKrfjbbeKUUrp5cN8798EZG@ppHV7fTBOgyTrMWQZM1KOVYI/e0@fpyYVaHSs7htM2Uq45FFZSxzmxTlE@2i9TTuRRCa1@OcbLdvDMHnZ7hAFuV/C5UpWUMjZ62xi2F/am4Lk3k/GjycOQuqVW@g8TCeH@M0vJ0h9onnd@@LiYM4vMz20FzqbFe1Ri5LtR4uryHLx1Xc0lXpwN0WGOuldhimmDWCFwK3AncC/wwDfgEmuhd6xlxNNmyZb1Gw" rel="nofollow noreferrer">Try it online!</a></p>
 <pre class="lang-scala prettyprint-override"><code>a=&gt;{val n=a.size;var L,M=List[Int]();for(i&lt;-0 to n-1){L=L:::a.slice(0,i+1).reverse.toList;M=M:::a.slice(i+1,n).reverse.toList};(L::: M).grouped(n).toList}
 </code></pre>
@@ -109,7 +114,7 @@
 }
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 72 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 72 bytes</h1>
 <pre class="lang-ruby prettyprint-override"><code>-&gt;a,*r{t=[]
 a.map{r+=t=[_1]+t}
 r+=t while t.pop
@@ -117,12 +122,12 @@ r+=t while t.pop
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGiNNulpSVpuhY3PXTtEnW0iqpLbKNjuRL1chMLqou0bYG8eMNY7ZJaLhBHoTwjMydVoUSvIL-AK1qrSC81MTkjvjgnMzlVI1GvOLMqVTO2FmLe5gIFrbRohWhDHSMdYx0THdNYhViIzIIFEBoA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 22 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 22 bytes</h1>
 <pre><code>{x@l!s#,/=+/!s:2#l:#x}
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJxLs6qucMhRLFbW0bfV1lcstjJSzrFSrqjl4kpzMNRWNAUAky4INg==" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 14 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 14 bytes</h1>
 <pre><code>#($$&amp;;&lt;/.)@#,:
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8FNVUtFK8NYM0UrS3V1LiU99TQFWysFdQUdBQMFKyDW1VNwDvJxW1pakqZrsU5ZQ0VFzdpGX0_TQVnHCiJ4006Ty89JT0EjGiLloKJZp6yjDBbTdVCOjVGzVgYJAzVwpSZn5CukKRjqKBjpKBjrKJjoKJhCTFmwAEIDAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -132,7 +137,7 @@ r+=t while t.pop
 <li><code>$$&amp;;</code> Unbox that result <code>;</code> into a single list and reshape it <code>$</code> to the shape of duplicated input <code>$</code>.</li>
 </ul>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 55 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 6.875 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 55 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 6.875 bytes</h1>
 <pre><code>LẋÞ`f?Lẇ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiTOG6i8OeYGY/TOG6hyIsIiIsIlsxLDIsMyw0LDVdIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -147,11 +152,6 @@ Lẋ        # ‎⁢repeated [length] times
 💎
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 60 bytes</h1>
-<pre><code>Partition[Join@@Reverse[#~Drop~i]~Sum~{i,l=-Tr[1^#],-l},-l]&amp;
-</code></pre>
-<p><a href="https://tio.run/##DcO9CsMgEADgPa8hZDqH9GdMcejUKTTdxIIEQw@ihuu1i3ivbvvBFz2/QvSMi2/r2CZPjIw52VvGZMw9fAO9g1VypbwLOpk/UQrCNuoH2eGpHOit/ru@TYSJrdKX1SjXy7z4JKUrAxzgCCc41662Hw" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu8" class="pu"><h1>Ruby, 110 bytes</h1>
 <pre><code>n=a.size
@@ -335,11 +335,11 @@ update()</code></pre>
 
 <p>This matrix plot gives a good idea from the structure due to a sequentially increasing input vector. </p>
 
-<p><a href="https://i.stack.imgur.com/vfHbO.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/vfHbO.png" alt="enter image description here"></a></p>
+<p><a href="https://i.sstatic.net/vfHbO.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/vfHbO.png" alt="enter image description here"></a></p>
 
 <p>Here's the matrix plot with a random input vector. Obviously some structure still exists.</p>
 
-<p><a href="https://i.stack.imgur.com/Z4yIU.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/Z4yIU.png" alt="enter image description here"></a></p>
+<p><a href="https://i.sstatic.net/Z4yIU.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Z4yIU.png" alt="enter image description here"></a></p>
 </div>
 <div id="pu15" class="pu"><h1>Python 2, <s>105</s> 96 bytes</h1>
 
